# wettingfront-lges

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
doc/source/: conf.py  example.yml  index.rst
src/wettingfront_lges/: __init__.py  anode.py  cache.py  cathode.py  jellyroll.py  readers.py  separator.py  writers.py
src/wettingfront_lges/samples/: jellyroll.csv
