[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wettingfront-lges"
description = "Battery-electrolyte wetting front analysis for LGES"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Jisoo Song", email = "jeesoo9595@snu.ac.kr"}
]
version = "0.0.0"
dynamic = [
    "dependencies",
]

[project.optional-dependencies]
test = [
    "pytest",
]
doc = [
    "furo",
    "sphinx",
    "sphinx-autoapi",
    "sphinx-tabs >= 3.4.5",
]
dev = [
    "flake8",
    "flake8-docstrings",
    "black",
    "isort",
    "docformatter",
    "doc8",
    "mypy",
    "types-PyYAML",
    "wettingfront-lges[test,doc]",
]

[project.entry-points."wettingfront.samples"]
lges = "wettingfront_lges:get_sample_path"

[project.entry-points."wettingfront.analyzers"]
Anode = "wettingfront_lges:anode_analyzer"
Separator = "wettingfront_lges.separator:separator_analyzer"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"

[tool.docformatter]
recursive = true
in-place = true
black = true

[tool.doc8]
ignore = ["D000", "D004"]
ignore-path = [
    ".venv",
    "src/*.egg-info",
    "doc/build",
]

[tool.mypy]
namespace_packages = true
explicit_package_bases = true
exclude = ["build"]
plugins = "numpy.typing.mypy_plugin"

[tool.pytest.ini_options]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
addopts = "--ignore-glob=doc/**/*.py --doctest-modules --doctest-glob=*.rst"
